displaying current weather data and 5 day forecast

--- a/index.html
+++ b/index.html
@@ -12,35 +12,72 @@
         <h1>Weather Dashboard</h1>
     </header>
 
-    <main>
-        <!-- city name input form -->
-        <div>
-            <h2>Search for a City</h2>
-            <form>
-                <input name="city" type=text autofocus="true" />
-                <button type="submit">Search</button>
-            </form>
+    <main class="row">
+        <div id="column-1">
+            <!-- city name input form -->
+            <div>
+                <h2>Search for a City</h2>
+                <form>
+                    <input name="city" type=text autofocus="true" />
+                    <button type="submit">Search</button>
+                </form>
+            </div>
+
+            <!-- recent searches -->
+            <div>
+
+            </div>
         </div>
+        <div id="column-2">
+            <!-- main city info -->
+            <div>
+                <h2 id="city-name">Minneapolis, MN <span id="date"></span> <span id="icon"></span></h2>
+                <p>Temp: <span id="temp"></span> °F</p>
+                <p>Wind: <span id="wind"></span> mph</p>
+                <p>Humidity: <span id="humidity"></span> %</p>
+                <p>UV Index: <span id="uv-index"></span></p>
+            </div>
 
-        <!-- recent searches -->
-        <div>
-
+            <!-- 5 day forecast -->
+            <h3>5-day Forecast:</h3>
+            <div class="forecast">          
+                <div class="card">
+                    <h3 id="date-1"></h3>
+                    <p id="icon-1"></p>
+                    <p>Temp: <span id="temp-1"></span> °F</p>
+                    <p>Wind: <span id="wind-1"></span> mph</p>
+                    <p>Humidity: <span id="humidity-1"></span> %</p>
+                </div>
+                <div class="card">
+                    <h3 id="date-2"></h3>
+                    <p id="icon-2"></p>
+                    <p>Temp: <span id="temp-2"></span> °F</p>
+                    <p>Wind: <span id="wind-2"></span> mph</p>
+                    <p>Humidity: <span id="humidity-2"></span> %</p>
+                </div>
+                <div class="card">
+                    <h3 id="date-3"></h3>
+                    <p id="icon-3"></p>
+                    <p>Temp: <span id="temp-3"></span> °F</p>
+                    <p>Wind: <span id="wind-3"></span> mph</p>
+                    <p>Humidity: <span id="humidity-3"></span> %</p>
+                </div>
+                <div class="card">
+                    <h3 id="date-4"></h3>
+                    <p id="icon-4"></p>
+                    <p>Temp: <span id="temp-4"></span> °F</p>
+                    <p>Wind: <span id="wind-4"></span> mph</p>
+                    <p>Humidity: <span id="humidity-4"></span> %</p>
+                </div>
+                <div class="card">
+                    <h3 id="date-5"></h3>
+                    <p id="icon-5"></p>
+                    <p>Temp: <span id="temp-5"></span> °F</p>
+                    <p>Wind: <span id="wind-5"></span> mph</p>
+                    <p>Humidity: <span id="humidity-5"></span> %</p>
+                </div>
+            </div>
         </div>
-
-        <!-- main city info -->
-        <div>
-            <p id="city-name"></p>
-            <p id="temp">Temp: </p>
-            <p id="wind">Wind: </p>
-            <p id="humidity">Humidity: </p>
-            <p id="uv-index">UV Index: </p>
-        </div>
-
-        <!-- 5 day forecast -->
-        <div>
-
-        </div>
-
     </main>
 
 
