search by city to get weather

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <!-- city name input form -->
             <div>
                 <h2>Search for a City</h2>
-                <form>
-                    <input name="city" type=text autofocus="true" />
-                    <button type="submit">Search</button>
+                <form id="city-form">
+                    <input id="city-input" name="city" type=text autofocus="true" />
+                    <button id="search" type="submit">Search</button>
                 </form>
             </div>
 
