--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
             </div>
 
             <!-- recent searches -->
-            <div>
+            <div id="recent-searches">
 
             </div>
         </div>
         <div id="column-2">
             <!-- main city info -->
             <div>
-                <h2 id="city-name">Minneapolis, MN <span id="date"></span> <span id="icon"></span></h2>
+                <h2 id="city-name"><span id="city"></span> <span id="date"></span> <span id="icon"></span></h2>
                 <p>Temp: <span id="temp"></span> °F</p>
                 <p>Wind: <span id="wind"></span> mph</p>
                 <p>Humidity: <span id="humidity"></span> %</p>
